--- a/html/ui.html
+++ b/html/ui.html
@@ -91,10 +91,10 @@
             <div id="inventory-menus" style="min-height: 100vh;">
                 <div class="row">
                   <!-- Anyone really use this? -Ok1ez -->
-                  <!-- <div class="inv-help-options">
+                  <div class="inv-help-options">
                     <q-btn class="" color="button" @click="options = true"><i class="fas fa-gear"></i></q-btn>
-                    <q-btn class="" color="button" @click="help = true"><i class="fas fa-question"></i></q-btn>
-                  </div> -->
+                    <!-- <q-btn class="" color="button" @click="help = true"><i class="fas fa-question"></i></q-btn> -->
+                  </div>
                   <q-dialog v-model="options">
                     <q-card>
                       <q-card-section>
